[tool.poetry]
name = "tdata_maker"
version = "0.1.0"
description = ""
authors = ["kuj1 <the.same.dentist@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opentele = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
